# sona-ai-os

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/adapters/: __init__.py  boot_manager.py  capability_adapter.py  exceptions.py  executive_adapter.py  kernel_bridge.py  memory_adapter.py  meta_reasoning_adapter.py  persistence.py  provider_adapter.py  runtime_registry.py  schemas.py  verification_adapter.py
backend/agents/: __init__.py  agent_capability_mapper.py  agent_checkpoint.py  agent_context.py  agent_coordinator.py  agent_delegator.py  agent_executor.py  agent_factory.py  agent_intelligence.py  agent_lifecycle.py  agent_manager.py  agent_memory.py  agent_metrics.py  agent_monitor.py  agent_negotiator.py  agent_permissions.py  agent_policies.py  agent_profile.py  agent_recovery.py  agent_registry.py  agent_router.py  agent_runtime_bridge.py  agent_scheduler.py  agent_security.py  agent_selector.py  agent_supervisor.py  agent_telemetry.py  android_agent.py  automation_agent.py  base.py  capabilities.py  coding_agent.py  communication.py  concrete_agents.py  context.py  coordinator.py  events.py  exceptions.py  executor.py  factory.py  (+22 more)
backend/ai/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  provider_manager.py  retry.py  schemas.py  token_tracker.py  unified_ai.py
backend/api/: __init__.py  adapters.py  agents.py  auth.py  automation.py  automation_v2.py  capabilities.py  chat.py  coding.py  cognitive.py  documents.py  execute.py  executive.py  health.py  memory.py  memory_analytics.py  meta_reasoning.py  microkernel.py  orchestration.py  plugins.py  research.py  router.py  runtime_workflows.py  system.py  tools.py  version.py  vision.py  voice.py  workspace.py
backend/app/: __init__.py  lifespan.py  main.py
backend/auth/: __init__.py  enterprise.py  middleware.py  passwords.py  permissions.py  quotas.py  tokens.py  user_store.py
backend/automation/: __init__.py  actions.py  api_automation.py  browser_automation.py  desktop_automation.py  engine.py  executor.py  history.py  macro.py  retry.py  scheduler_engine.py  schemas.py  templates.py
backend/brain/: __init__.py  agent_router.py  memory_bridge.py  orchestrator.py  schemas.py
backend/capabilities/: __init__.py  base.py  cache.py  composer.py  dependency_graph.py  events.py  exceptions.py  health.py  loader.py  manager.py  marketplace.py  optimizer.py  permissions.py  registry.py  resolver.py  sandbox.py  schemas.py  selector.py  telemetry.py  versioning.py
backend/coding_assistant/: __init__.py  analyzer.py  generator.py  reviewer.py  service.py
(+474 files in other folders)
